cc/css/style.css
/* ... */
.button {
  cursor: pointer;
}
.rightButton,
.rightButton > .button {
  font-size: 1.2rem;
  line-height: 1.2rem;
}
.iconButton {
  width: 1.2rem;
  height: 1.2rem;
  /* font-size: 1rem; */
  /* align-self: flex-end; */
  text-align: center;
  justify-content: center;
  /* line-height: 1rem; */
  /* text-justify: center; */
  /* display:flex; */
}

@media (hover: hover) {
  /* .gslide[data-dupe] .gslide-description:hover, */
  div.button:not(.disabled):hover
  {
    color: black;
    background-color: white;
    text-shadow: none;
  }
}

/* .gslide[data-dupe] .gslide-description:active, */
div.button:not(.disabled):active,
div.button.checked {
  color: black;
  background: #cccccc;
}

div.button.toggled,
div.button.disabled {
  border: 1px solid gray;
}

div.button.disabled {
	background: dimgrey;
}

div.button.toggled.legend {
  text-shadow: none;
  opacity: 0.5;
}

.rightButton {
  align-self: center;
  margin-right: 5px;
}

.fa-home {
  transform: translateX(-4%);
}
#topNav,
#filters,
#cards {
user-select: none;
-moz-user-select: none;
-khtml-user-select: none;
-webkit-user-select: none;
-o-user-select: none;
}
#topNav {
  background: var(--main-background-color);
  overflow: hidden;
  position: fixed;
  top: 0;
  margin: 0;
  left: 0;
  right: 0;
  z-index: 99;
  display: flex;
  height: var(--topNav-height);
  padding: 5px;
}
#filters {
  z-index: 3;
  width:100%;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 5px;
  top: calc(10px + var(--topNav-height));
  transition: top 0.1s ease-in-out;
  -o-transition: top 0.1s ease-in-out;
  -ms-transition: top 0.1s ease-in-out;
  -moz-transition: top 0.1s ease-in-out;
  -webkit-transition: top 0.1s ease-in-out;
}
#filters.hidden {
  top: -1000%;
}

@media (hover: hover) {
  body #filters.hidden.canSlide:hover,
  body #filters.hidden.canSlide.active,
  body #topNav:hover + #filters.hidden.canSlide {
    top: calc(10px + var(--topNav-height));
  }
  body #filters.canSlide,
  body #filters:not(.canSlide):not(.hidden) {
    border-bottom: 1px solid white;
    margin-bottom: -1px;
    box-shadow: 0 3px 8px #222222;
  }
}

#checkboxes.hidden {
  display: none;
}

#filters {
  display: inline-block;
}

.filterSlider {
  -webkit-appearance: none; /* Override default CSS styles */
  appearance: none;
  /* height: 25px; /* Specified height */
  height: 1em;
  background: #808080; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
  transition: opacity 0.2s;
  border-radius: .5em;
}
/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.filterSlider::-webkit-slider-thumb {
  -webkit-appearance: none; 
  appearance: none;
  width: 1.3em;
  height: 1.3em; 
  background: #dddddd; 
  cursor: pointer;
  border-radius: 50%;
}

.filterSlider::-moz-range-thumb {
  width: 1.3em;
  height: 1.3em;
  background: #dddddd;
  cursor: pointer;
  border-radius: 50%;
}

#raritySlider {
  width: 7em;
}
#opcountSlider {
  width: 13em;
}
#opcountDisp {
  width: 1em;
  display: inline-block;
  text-align: right;
}

img:not(.chartjs-size-monitor).hidden:not(.forceShow),
div:not(.chartjs-size-monitor).hidden:not(.forceShow) {
  display: none;
}
#legend {
  /* margin: 8px 0 0 8px; */
  margin-left: 2rem;
  flex-grow: 1;
  align-self: center;
}

#pageTitle {
  font-size: 2.3em;
  line-height: var(--topNav-height);
  /* margin: 0 0 .5em 0; */
}

body {
  margin-top: calc(10px + var(--topNav-height));
  /* margin-top: 4rem; */
}

body.soul-mode .glightbox-container .gslide.current .gslide-description::after {
    font-size: 1.5em;
    content: "SOVL: " attr(data-soul);
    position: absolute;
    font-weight: 500;
	text-align: center;
	margin: auto;
	color: #0ff;
	top: -1.5em;
	width: 100%;
	pointer-events: none;
}
body.soul-mode .cardContainer::after {
    content: attr(data-soul);
    position: absolute;
    transform: translate(calc(-256px + 6px),calc(144px - 100% - 6px));
	margin: auto;
	pointer-events: none;
	font-weight: 700;
	color: #0ff;
	background: #000a;
}
.gslide:not(.current) .gslide-description,
.gslide:not([data-dupe]) .gslide-description {
	border-color: 0;
	pointer-events: none;
}
body.soul-mode #deco {
    position: fixed;
    width: 100%;
    height: calc(100% - var(--topNav-height) - 10px);
    box-shadow: inset 0 0 3em 0em #0ff2;
    z-index: 99;
    pointer-events: none;
}

#deco {
	display:none;
}

#filters > div:first-child {
	margin-left: 5px;
}

